--- a/check-user-device/index.html
+++ b/check-user-device/index.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Button Ripple Effect</title>
+    <title>Document</title>
   </head>
   <body>
-    <a href="#" class="btn"><span>mouseover</span></a>
-    <a href="#" class="btn2"><span>mousemove</span></a>
-    <div class="cursor"></div>
     <script src="main.js"></script>
   </body>
 </html>
