--- a/[003] reviews/index.html
+++ b/[003] reviews/index.html
@@ -24,7 +24,11 @@
         <!-- review -->
         <article class="review">
           <div class="img-container">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTu3_qIHtXBZ7vZeMQhyD8qLC1VRB9ImHadL09KET_iSQEX6ags4ICknfmqEKz8Nf6IOsA&usqp=CAU" id="person-img" alt="" />
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTu3_qIHtXBZ7vZeMQhyD8qLC1VRB9ImHadL09KET_iSQEX6ags4ICknfmqEKz8Nf6IOsA&usqp=CAU"
+              id="person-img"
+              alt=""
+            />
           </div>
           <h4 id="author">sara jones</h4>
           <p id="job">ux designer</p>
