--- a/[009] cursor kit/cursor special kit/index.html
+++ b/[009] cursor kit/cursor special kit/index.html
@@ -10,6 +10,11 @@
 <body>
   <div class="cursor"></div>
   <div class="cursor2"></div>
+
+  <main>
+    <button>clickable</button>
+    <button>clickable</button>
+  </main>
   <script src="main.js"></script>
 </body>
 </html>
