--- a/[011] cursor kit/index.html
+++ b/[011] cursor kit/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main>
+      <h1>max-width: 700px => will remove the cursor</h1>
       <button>Button</button>
       <button>Button</button>
       <a href="">Links</a>
