--- a/[016] grocery/index.html
+++ b/[016] grocery/index.html
@@ -13,23 +13,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
-      <div class="box">
-        <label for="items-name">
-          <input type="text" name="text" id="" />
-          <input type="submit" value="submit" />
-        </label>
-        <div class="items">
-          <!-- <div class="item">
-            <p class="name">item</p>
-            <div class="btns">
-               <button class="delete">delete</button>
-              <button class="edit">edit</button> 
-            </div> -->
-          </div>
+    <section class="section-center">
+      <!-- form -->
+      <form class="grocery-form">
+        <p class="alert"></p>
+        <h3>grocery bud</h3>
+        <div class="form-control">
+          <input type="text" id="grocery" placeholder="e.g. eggs" />
+          <button type="submit" class="submit-btn">submit</button>
         </div>
+      </form>
+      <!-- list -->
+      <div class="grocery-container">
+        <div class="grocery-list"></div>
+        <button class="clear-btn">clear items</button>
       </div>
     </section>
+    <!-- javascript -->
     <script src="main.js"></script>
   </body>
 </html>
