--- a/[019] form validation/index.html
+++ b/[019] form validation/index.html
@@ -19,22 +19,26 @@
         <div class="input-control">
           <label for="username">Username</label>
           <input id="username" name="username" type="text" />
-          <div class="error"></div>
+          <div class="message error-text"></div>
+          <div class="message success-text"></div>
         </div>
         <div class="input-control">
           <label for="email">Email</label>
           <input id="email" name="email" type="text" />
-          <div class="error"></div>
+          <div class="message error-text"></div>
+          <div class="message success-text"></div>
         </div>
         <div class="input-control">
           <label for="password">Password</label>
           <input id="password" name="password" type="password" />
-          <div class="error"></div>
+          <div class="message error-text"></div>
+          <div class="message success-text"></div>
         </div>
         <div class="input-control">
           <label for="password2">Password again</label>
           <input id="password2" name="password2" type="password" />
-          <div class="error"></div>
+          <div class="message error-text"></div>
+          <div class="message success-text"></div>
         </div>
         <button type="submit">Sign Up</button>
       </form>
